tests/snapshots/regression/precedence__logical_precedence.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/logical_precedence.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 5 errors • tests/fixtures/precedence/logical_precedence.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/logical_precedence.flx:1:1
  |
1 | print(true || false && false);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/precedence/logical_precedence.flx:1:1
  |
1 | print(true || false && false);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/logical_precedence.flx:1:1
  |
1 | print(true || false && false);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/logical_precedence.flx:2:1
  |
2 | print(!true == false);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/logical_precedence.flx:2:1
  |
2 | print(!true == false);
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 5 errors.
